tree-sitter-xfst/test/corpus/detail.txt
========================
no space before operator
========================

[ %0 | 1 | 2 | 3 ]+

---

(source_file
  (expression
    (expression
      (expression
        (expression
          (expression
            (expression (symbol))
            (union)
            (expression (symbol)))
          (union)
          (expression (symbol)))
        (union)
        (expression (symbol))))
    (plus)))

============
digit regeix
============

[ %0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 ]+

---

(source_file
  (expression
    (expression
      (expression
        (expression
          (expression
            (expression
              (expression
                (expression
                  (expression
                    (expression
                      (expression
                        (expression (symbol))
                        (union)
                        (expression (symbol)))
                      (union)
                      (expression (symbol)))
                    (union)
                    (expression (symbol)))
                  (union)
                  (expression (symbol)))
                (union)
                (expression (symbol)))
              (union)
              (expression (symbol)))
            (union)
            (expression (symbol)))
          (union)
          (expression (symbol)))
        (union)
        (expression (symbol))))
    (plus)))

=============
decimal regex
=============

[ %0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 ]+ [ %, | %. ] [ %0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 ]+

---

(source_file
  (expression
    (expression
      (expression
        (expression
          (expression
            (expression
              (expression
                (expression
                  (expression
                    (expression
                      (expression
                        (expression
                          (expression
                            (expression (symbol))
                            (union)
                            (expression (symbol)))
                          (union)
                          (expression (symbol)))
                        (union)
                        (expression (symbol)))
                      (union)
                      (expression (symbol)))
                    (union)
                    (expression (symbol)))
                  (union)
                  (expression (symbol)))
                (union)
                (expression (symbol)))
              (union)
              (expression (symbol)))
            (union)
            (expression (symbol))))
        (plus))
      (expression
        (expression
          (expression (symbol))
          (union)
          (expression (symbol)))))
    (expression
      (expression
        (expression
          (expression
            (expression
              (expression
                (expression
                  (expression
                    (expression
                      (expression
                        (expression
                          (expression (symbol))
                          (union)
                          (expression (symbol)))
                        (union)
                        (expression (symbol)))
                      (union)
                      (expression (symbol)))
                    (union)
                    (expression (symbol)))
                  (union)
                  (expression (symbol)))
                (union)
                (expression (symbol)))
              (union)
              (expression (symbol)))
            (union)
            (expression (symbol)))
          (union)
          (expression (symbol))))
      (plus))))
